--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "crosstable"]
+	path = crosstable
+	url = https://github.com/danchaltiel/crosstable
+	shallow = true
+	registered = true
